src/objects/UniqueEntry__FTR_Validation_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>UniqueEntry__FTR_Enable_Address_Validation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>FTR Enable Address Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__FTR_Enable_Email_Validation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>FTR Enable Email Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__FTR_Enable_Name_Validation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>FTR Enable Name Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__FTR_Enable_Phone_Validation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>FTR Enable Phone Validation</label>
        <type>Checkbox</type>
    </fields>
    <label>FTR Validation Settings</label>
</CustomObject>